# DMTracker

./: .gitignore  .pre-commit-config.yaml  memory_metrics.txt  nvidia-data-movement-experiments.code-workspace  readme.md  setup_timemory.sh
dmv_profiler/: .gitignore  CMakeLists.txt  Manifest.in  build.sh  kwon-setup.sh  lassen-setup.sh  lc-setup.sh  linux-setup.sh  main.bzl  pyproject.toml  quartz-setup.sh  setup.py
dmv_profiler/examples/: .gitignore  CMakeLists.txt  build.sh
dmv_profiler/examples/common/: CMakeLists.txt  benchmark.cu  cudacommon.h
dmv_profiler/examples/cublas-gemm/: CMakeLists.txt  basic_gemm.cu  gemm-opt.cu  gemm-uvm.cu  gemm.cu  kernel_header.h  run_fill_experiment.sh  run_gemm_w_wo_uvm.sh  run_sgemm_kernel_opt.sh
dmv_profiler/examples/cublas-gemm/kernels/: version_0.cuh  version_1.cuh  version_2.cuh  version_3.cuh  version_4.cuh  version_5.cuh
dmv_profiler/examples/cutlass-gemm/: CMakeLists.txt  gemm.cu
dmv_profiler/examples/sqrt/: CMakeLists.txt  main.cpp  main.cuh  profiler.cpp  profiler.h  sqrt  utils.cu
dmv_profiler/include/: AbstractConfig.h  ActivityBuffers.h  ActivityLoggerFactory.h  ActivityProfilerController.h  ActivityProfilerInterface.h  ActivityProfilerProxy.h  ActivityTrace.h  ActivityTraceInterface.h  ActivityType.h  ClientInterface.h  Config.h  ConfigLoader.h  CudaDeviceProperties.h  CudaUtil.h  CuptiActivity.h  CuptiActivityApi.h  CuptiActivityBuffer.h  CuptiActivityPlatform.h  CuptiActivityProfiler.h  CuptiCallbackApi.h  CuptiCallbackApiMock.h  CuptiEventApi.h  CuptiMetricApi.h  CuptiNvPerfMetric.h  CuptiNvmlGpuUtilization.h  CuptiRangeProfiler.h  CuptiRangeProfilerApi.h  CuptiRangeProfilerConfig.h  DaemonConfigLoader.h  EventProfiler.h  EventProfilerController.h  GenericTraceActivity.h  IActivityProfiler.h  ILoggerObserver.h  ITraceActivity.h  Logger.h  LoggerCollector.h  SampleListener.h  ScopeExit.h  ThreadUtil.h  (+11 more)
dmv_profiler/lib/: AbstractConfig.cpp  ActivityProfilerController.cpp  ActivityProfilerProxy.cpp  ActivityType.cpp  Config.cpp  ConfigLoader.cpp  CudaDeviceProperties.cpp  CudaUtil.cpp  CuptiActivity.tpp  CuptiActivityApi.cpp  CuptiActivityPlatform.cpp  CuptiActivityProfiler.cpp  CuptiCallbackApi.cpp  CuptiEventApi.cpp  CuptiMetricApi.cpp  CuptiNvPerfMetric.cpp  CuptiNvmlGPUUtilization.cpp  CuptiNvmlGpuUtilization.cpp  CuptiRangeProfiler.cpp  CuptiRangeProfilerApi.cpp  CuptiRangeProfilerConfig.cpp  EventProfiler.cpp  EventProfilerController.cpp  GPUUtilization.cpp  GenericTraceActivity.cpp  ILoggerObserver.cpp  Logger.cpp  ThreadUtil.cpp  WeakSymbols.cpp  cupti_strings.cpp  init.cpp  libdmv.cpp  libdmv_api.cpp  output_csv.cpp  output_json.cpp  pybind.cpp
dmv_profiler/pybind/: CMakeLists.txt  main.cpp
dmv_profiler/src/: .gitignore  CMakeLists.txt
dmv_profiler/src/examples/: .gitignore
dmv_profiler/src/examples/common/: benchmark.cu  cuda_device_attr.h
dmv_profiler/src/examples/cutlass-gemm/: cutlass-gemm
dmv_profiler/src/lib/: pybind.cpp
dmv_profiler/test/: CMakeLists.txt  ConfigTest.cpp  CuptiActivityProfilerTest.cpp  CuptiCallbackApiTest.cpp  CuptiProfilerApiTest.cu  CuptiRangeProfilerApiTest.cpp  CuptiRangeProfilerConfigTest.cpp  CuptiRangeProfilerTest.cpp  CuptiRangeProfilerTestUtil.h  CuptiStringsTest.cpp  EventProfilerTest.cpp  LoggerObserverTest.cpp  Makefile  MockActivitySubProfiler.cpp  MockActivitySubProfiler.h  PidInfoTest.cpp
src/tracer/examples/: CMakeLists.txt  kineto_stress_test.cpp
src/tracer/examples/common/: CMakeLists.txt  benchmark.cu
src/tracer/examples/cublas-gemm/: CMakeLists.txt  gemm.cu
src/tracer/examples/cutlass-gemm/: CMakeLists.txt  README.md
src/tracer/examples/sqrt/: CMakeLists.txt  main  utils.cu
src/tracer/sample_programs/: CMakeLists.txt  kineto_cupti_profiler.cpp  kineto_playground.cpp  kineto_playground.cu
src/tracer/src/examples/: CMakeLists.txt  kineto_playground  kineto_playground.cpp  kineto_playground.cu
src/tracer/src/test/: CMakeLists.txt
use-cases/: .gitignore  CMakeLists.txt
use-cases/src/: CMakeLists.txt
use-cases/src/common/: CMakeLists.txt
use-cases/src/cuda/: CMakeLists.txt
use-cases/src/cuda/BERT/: CMakeLists.txt
use-cases/src/cuda/common/: main.cu
use-cases/src/cuda/cublas-gemm/: CMakeLists.txt  caliper.config  gemm.cu  run_gemm.sh
use-cases/src/cuda/cutlass-gemm/: gemm.cu
use-cases/src/cuda/simple-gemm/: gemm.cu
use-cases/src/data/gemm/test-1,s=1,exp/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=1,uvm/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=1,uvm-advise/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=1,uvm-prefetch/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=1,uvm-prefetch-advise/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=2,exp/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=2,uvm/: metric_summary.csv  (+6 more)
use-cases/src/data/gemm/test-1,s=2,uvm-advise/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=2,uvm-prefetch/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
use-cases/src/data/gemm/test-1,s=2,uvm-prefetch-advise/: metric_summary.csv  nsys_trace.qdrep  nvbit_trace.json  region_profile.json  runtime_metrics.csv  runtime_report.txt  uvm-tracking.json
(+183 files in other folders)
